# imapirate

./: .gitignore  Cargo.toml  LICENSE  README.md  scene.scn  trace-1612800227.json
.cargo/: config
assets/: ortho-map.tmx
assets/map_gen/: header  sea_background.tmx
assets/sprites/: texturepacker.tps
assets/sprites/land/: chara_green_base_copy.ase
assets/sprites/sea/: sheet.tmx  texture.json
config/: KeyBindings.json  mobs.ron  worldgen.ron
crates/pirate_tilemap/: Cargo.toml  README.md
crates/pirate_tilemap/src/: lib.rs
src/: loading.rs  main.rs  sea_main.rs  tilemap.rs  tmxgen.rs  util.rs  worldgen.rs
src/background/: mod.rs  sea_bg.vert
src/character/: mod.rs
src/land/: collision.rs  islands_from_map.rs  loader.rs  map.rs  mobs.rs  mobs_ia.rs  mod.rs  pathfinding.rs  player.rs  ui.rs  worldgen.rs
src/materials/: mod.rs  sea.rs
src/menu/: main_menu.rs  mod.rs
src/sea/: collision.rs  loader.rs  map.rs  minimap.rs  mod.rs  player.rs  tilemap.rs  worldgen.rs
src/sea/background/: mod.rs  sea_bg.frag
src/shaders/: sea.frag
