[package]
name = "my_bevy_game"
version = "0.1.0"
authors = ["Timothée Le Berre <timothee.leberre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html 

[dependencies]
bevy_dylib = "0.4"
seahash = "=4.0.1"
noise = {version = "0.7", default-features = false}
serde = "1.*"
ron = "0.6.2"
rapier2d = {version="*", features = ["simd-nightly"]}
[dependencies.bevy]
version="0.4"
default-features = true
features = [
  "dynamic", 
  "bevy_dynamic_plugin",
  "bevy_wgpu",
  "bevy_winit",
  "render",
  "png",
  "x11",
]
