[package]
name = "my_bevy_game"
version = "0.1.0"
authors = ["Timothée Le Berre <timothee.leberre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html 

[dependencies]
bevy_dylib = {git=" https://github.com/bevyengine/bevy"}
seahash = "*"
noise = "*"
serde = "*"
ron = "*"
kdtree-collisions = {git = "https://github.com/Imakoala/kdtree-collisions"}
parry2d = "*"
image = "*"
density-mesh-core = "1.5.0"
bevy_egui = {git = "https://github.com/Weasy666/bevy_egui", branch="main"}
[dependencies.bevy]
git="https://github.com/bevyengine/bevy"
default-features = false
features = [
  "dynamic", 
  "bevy_dynamic_plugin",
  "bevy_wgpu",
  "bevy_winit",
  "render",
  "png",
  "x11",
  "trace", 
  "trace_chrome"
]
